examples/errors/parsing/case-empty-branches.cn
main : () [impure] =
  case 5 of { }
